libqt6c/src/libqjsonarray.hpp

typedef QJsonArray::const_iterator QJsonArray__const_iterator;
typedef QJsonArray::iterator QJsonArray__iterator;
typedef struct QJsonArray QJsonArray;
typedef struct QJsonArray__const_iterator QJsonArray__const_iterator;
typedef struct QJsonArray__iterator QJsonArray__iterator;
typedef struct QJsonValue QJsonValue;
typedef struct QJsonValueRef QJsonValueRef;
QJsonArray* QJsonArray_new();
QJsonArray* QJsonArray_new2(const QJsonArray* other);
void QJsonArray_OperatorAssign(QJsonArray* self, const QJsonArray* other);
QJsonArray* QJsonArray_FromStringList(const QStringList* list);
QJsonArray* QJsonArray_FromVariantList(const libqt_list /* of QVariant* */ list);
libqt_list /* of QVariant* */ QJsonArray_ToVariantList(const QJsonArray* self);
ptrdiff_t QJsonArray_Size(const QJsonArray* self);
ptrdiff_t QJsonArray_Count(const QJsonArray* self);
bool QJsonArray_IsEmpty(const QJsonArray* self);
QJsonValue* QJsonArray_At(const QJsonArray* self, ptrdiff_t i);
QJsonValue* QJsonArray_First(const QJsonArray* self);
QJsonValue* QJsonArray_Last(const QJsonArray* self);
void QJsonArray_Prepend(QJsonArray* self, const QJsonValue* value);
void QJsonArray_Append(QJsonArray* self, const QJsonValue* value);
void QJsonArray_RemoveAt(QJsonArray* self, ptrdiff_t i);
QJsonValue* QJsonArray_TakeAt(QJsonArray* self, ptrdiff_t i);
void QJsonArray_RemoveFirst(QJsonArray* self);
void QJsonArray_RemoveLast(QJsonArray* self);
void QJsonArray_Insert(QJsonArray* self, ptrdiff_t i, const QJsonValue* value);
void QJsonArray_Replace(QJsonArray* self, ptrdiff_t i, const QJsonValue* value);
bool QJsonArray_Contains(const QJsonArray* self, const QJsonValue* element);
QJsonValueRef* QJsonArray_OperatorSubscript(QJsonArray* self, ptrdiff_t i);
QJsonValue* QJsonArray_OperatorSubscript2(const QJsonArray* self, ptrdiff_t i);
bool QJsonArray_OperatorEqual(const QJsonArray* self, const QJsonArray* other);
bool QJsonArray_OperatorNotEqual(const QJsonArray* self, const QJsonArray* other);
void QJsonArray_Swap(QJsonArray* self, QJsonArray* other);
QJsonArray__iterator* QJsonArray_Begin(QJsonArray* self);
QJsonArray__const_iterator* QJsonArray_Begin2(const QJsonArray* self);
QJsonArray__const_iterator* QJsonArray_ConstBegin(const QJsonArray* self);
QJsonArray__const_iterator* QJsonArray_Cbegin(const QJsonArray* self);
QJsonArray__iterator* QJsonArray_End(QJsonArray* self);
QJsonArray__const_iterator* QJsonArray_End2(const QJsonArray* self);
QJsonArray__const_iterator* QJsonArray_ConstEnd(const QJsonArray* self);
QJsonArray__const_iterator* QJsonArray_Cend(const QJsonArray* self);
QJsonArray__iterator* QJsonArray_Insert2(QJsonArray* self, QJsonArray__iterator* before, const QJsonValue* value);
QJsonArray__iterator* QJsonArray_Erase(QJsonArray* self, QJsonArray__iterator* it);
QJsonArray* QJsonArray_OperatorPlus(const QJsonArray* self, const QJsonValue* v);
QJsonArray* QJsonArray_OperatorPlusAssign(QJsonArray* self, const QJsonValue* v);
QJsonArray* QJsonArray_OperatorShiftLeft(QJsonArray* self, const QJsonValue* v);
bool QJsonArray_Empty(const QJsonArray* self);
void QJsonArray_Delete(QJsonArray* self);